# nemean

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
account/: account.go  account_test.go  address.go  address_test.go  aleo.go  crypto.go  pedersen.go  pedersen_test.go  privatekey.go  privatekey_test.go  schnorr.go  viewkey.go  viewkey_test.go
aleo/: Cargo.toml  aleo.h
aleo/src/: lib.rs
aleo/src/account/: account.rs  mod.rs
aleo/src/c_error/: c_error.rs  mod.rs
aleo/src/record/: mod.rs  record.rs
aleo/src/transaction/: transaction.rs
cmd/nemean/: account_rpc.go  acount_rpc.go  action_wallet.go  command.go  main.go
cmd/rpc/: main.go
cmd/wallet/: acount_rpc.go  action.go  command.go  main.go
doc/: airgapped.md  getting_started.md  integration.md
internal/crypto/twistededwards/: curve.go  doc.go  int.go  marshal.go  param.go  point.go
internal/utils/: binary.go
network/: params.go
parameters/: parameters.go  parameters_test.go  params.go
params/: parameters.go
record/: aleo.go  record.go
rpc/: README.md  json.go  method.go  rpc.go
transaction/: aleo.go  transaction.go
